--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -7,7 +7,7 @@
     <title>Sign In</title>
 </head>
 <body>
-    <form action="/signin" method="post">
+    <form action="/user/signin" method="post">
         <input type="text" name="email" placeholder="Email">
         <br><br>
         <input type="password" name="password" placeholder="Password">
