--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,7 +7,7 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <form action="/signup" method="post">
+    <form action="/user/signup" method="post">
         <input type="text" name="email" placeholder="Email">
         <br><br>
         <input type="password" name="password" placeholder="Password">
